--- a/pom.xml
+++ b/pom.xml
@@ -141,11 +141,19 @@
       <version>${commons-logging.version}</version>
     </dependency>
 
+    <!--<dependency>-->
+      <!--<groupId>commons-fileupload</groupId>-->
+      <!--<artifactId>commons-fileupload</artifactId>-->
+      <!--<version>${commons-fileupload.version}</version>-->
+    <!--</dependency>-->
+    <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
     <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
-      <version>${commons-fileupload.version}</version>
+      <version>1.3</version>
     </dependency>
+
+
 
     <dependency>
       <groupId>commons-io</groupId>
